--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <body>
         <h1>Odin Recipes</h1>
+
+        <p><a href="./recipes/chickenkabob.html">Marinated Greek Chicken Kabobs</a></p>
     </body>
 
 </html>
