--- a/recipes/chickenkabob.html
+++ b/recipes/chickenkabob.html
@@ -7,5 +7,9 @@
 
     <body>
         <h1>Marinated Greek Chicken Kabobs</h1>
+        
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F12%2F15%2F3775477-marinated-greek-chicken-kabobs-Allrecipes-Magazine-4x3-1.jpg&q=60&c=sc&orient=true&poi=auto&h=512">
+
+        
     </body>
 </html>
