--- a/recipes/chickenkabob.html
+++ b/recipes/chickenkabob.html
@@ -10,6 +10,10 @@
         
         <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F12%2F15%2F3775477-marinated-greek-chicken-kabobs-Allrecipes-Magazine-4x3-1.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Beautiful Marinated Greek Chicken Kabobs">
 
-
+        <h3>This is a chicken kabob recipe that I would love to share! Plan to marinate for 3 hours. Serve with Greek rice!</h3>
+        
+        <p>Perfect summertime dinner. Wow the yogurt marinade made the chicken delicious! People were raving at my outdoor evening Mediterrean mean. 
+            I served with warm pita and hummus so folks could put their kabob items right into a pita to make a gyro. Also served a cold orzo pasta made with mint and feta. 
+            This has become my go-to for a winning summer meal!</p>
     </body>
 </html>
