--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <p><a href="./recipes/chickenkabob.html">Marinated Greek Chicken Kabobs</a></p>
+        <ul>
+            <li><a href="./recipes/chickenkabob.html">Marinated Greek Chicken Kabobs</a></li>
+            <li><a href="./recipes/tiramisu.html">Tiramisu</a></li>
+        </ul>
     </body>
 
 </html>
