--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -18,16 +18,16 @@
         <h2>Ingredients</h2>
             
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>6 large egg yolks</li>
+            <li>¾ cup white sugar</li>
+            <li>⅔ cup milk</li>
+            <li>1 ¼ cups heavy cream</li>
+            <li>½ teaspoon vanilla extract</li>
+            <li>1 pound mascarpone cheese, at room temperature</li>
+            <li>¼ cup strong brewed coffee, at room temperature</li>
+            <li>2 tablespoons rum</li>
+            <li>2 (3 ounce) packages ladyfinger cookies</li>
+            <li>1 tablespoon unsweetened cocoa powder</li>
         </ul>
     </body>
 </html>
