Add Link to index.html

--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -45,5 +45,7 @@
             <li>Cover and refrigerate until set, 4 to 6 hours.</li>
             <li>Enjoy!</li>
         </ol>
+
+        <a href="../index.html">Go back</a>
     </body>
 </html>
