--- a/recipes/chickenkabob.html
+++ b/recipes/chickenkabob.html
@@ -41,5 +41,7 @@
             <li>Thread the chicken, onion wedges, and green bell pepper pieces alternately onto skewers. Discard remaining yogurt mixture.</li>
             <li>Grill skewers on the prepared grill until the chicken is no longer pink and juices run clear.</li>
         </ol>
+
+        <a href="../index.html">Go back</a>
     </body>
 </html>
