--- a/recipes/caprese.html
+++ b/recipes/caprese.html
@@ -6,7 +6,10 @@
     </head>
 
     <body>
-        
-    </body>
+        <h1>Peach and Tomato Caprese Salad</h1>
 
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4531443.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Peach and Tomato Caprese Salad">
+
+        <h2>This peach caprese salad with heirloom tomatoes and fresh mozzarella is topped with a simple balsamic vinaigrette for a fantastic summer appetizer.</h2>
+    </body>
 </html>
