Add ingredients and add caprese salad to index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="./recipes/chickenkabob.html">Marinated Greek Chicken Kabobs</a></li>
             <li><a href="./recipes/tiramisu.html">Tiramisu</a></li>
+            <li><a href="./recipes/caprese.html">Peach and Tomato Caprese Salad</a></li>
         </ul>
     </body>
 
