--- a/recipes/caprese.html
+++ b/recipes/caprese.html
@@ -13,5 +13,17 @@
         <h2>This peach caprese salad with heirloom tomatoes and fresh mozzarella is topped with a simple balsamic vinaigrette for a fantastic summer appetizer.</h2>
 
         <p>Such a refreshing summer salad with fresh peaches a mind fresh tomatoes. I used Buratta mozzarellas cheese with truffles which gave it a country-club meal feel.</p>
+
+        <h2>Ingredients</h2>
+
+        <ul>
+            <li>2 tablespoons extra-virgin olive oil</li>
+            <li>1 tablespoon balsamic vinegar</li>
+            <li>1 teaspoon flaked salt, divided</li>
+            <li>2 large heirloom tomatoes, thinly sliced</li>
+            <li>2 ripe peaches - halved, pitted, and sliced into half moons</li>
+            <li>1 (8 ounce) ball fresh mozzarella, thinly sliced</li>
+            <li>6 leaves fresh basil</li>
+        </ul>
     </body>
 </html>
