Add steps to caprese salad

--- a/recipes/caprese.html
+++ b/recipes/caprese.html
@@ -25,5 +25,13 @@
             <li>1 (8 ounce) ball fresh mozzarella, thinly sliced</li>
             <li>6 leaves fresh basil</li>
         </ul>
+
+        <h2>Steps</h2>
+
+        <ol>
+            <li>Whisk olive oil, balsamic vinegar, and 1 pinch flaked salt together in a bowl until dressing is smooth.</li>
+            <li>Alternate tomato slices, peach slices, mozzarella slices, and basil leaves in layers on a platter. 
+                Drizzle dressing over salad and sprinkle remaining flaked salt on top.</li>
+        </ol>
     </body>
 </html>
