Add go back to index in caprese html

--- a/recipes/caprese.html
+++ b/recipes/caprese.html
@@ -33,5 +33,7 @@
             <li>Alternate tomato slices, peach slices, mozzarella slices, and basil leaves in layers on a platter. 
                 Drizzle dressing over salad and sprinkle remaining flaked salt on top.</li>
         </ol>
+
+        <a href="../index.html">Go back</a>
     </body>
 </html>
