Add initial styling to index page

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <div class="index-container">
+            <h1 class="index-header">Odin Recipes</h1>
 
-        <ul>
-            <li><a href="./recipes/chickenkabob.html">Marinated Greek Chicken Kabobs</a></li>
-            <li><a href="./recipes/tiramisu.html">Tiramisu</a></li>
-            <li><a href="./recipes/caprese.html">Peach and Tomato Caprese Salad</a></li>
-        </ul>
+            <ul class="recipe-array">
+                <li><a href="./recipes/chickenkabob.html" class="recipe-link">Marinated Greek Chicken Kabobs</a></li>
+                <li><a href="./recipes/tiramisu.html" class="recipe-link">Tiramisu</a></li>
+                <li><a href="./recipes/caprese.html" class="recipe-link">Peach and Tomato Caprese Salad</a></li>
+            </ul>
+        </div>
     </body>
 
 </html>
