--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Project Recipes</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="./styles/index-style.css">
     </head>
 
     <body>
         <h1 class="index-header">Odin Recipes</h1>
-        
+
         <div class="index-container">
             <ul class="recipe-array">
                 <li><a href="./recipes/chickenkabob.html" class="recipe-link">Marinated Greek Chicken Kabobs</a></li>
