Add recipe style and add img styling

--- a/recipes/chickenkabob.html
+++ b/recipes/chickenkabob.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Chicken Kabob Recipe</title>
+        <link rel="stylesheet" href="../styles/recipe-style.css">
     </head>
 
     <body>
