Add final styling

--- a/recipes/caprese.html
+++ b/recipes/caprese.html
@@ -3,37 +3,42 @@
     <head>
         <meta charset="UTF-8">
         <title>Peach and Tomato Caprese Salad</title>
+        <link rel="stylesheet" href="../styles/recipe-style.css">
+
     </head>
 
     <body>
         <h1>Peach and Tomato Caprese Salad</h1>
 
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4531443.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Peach and Tomato Caprese Salad">
+        <div class="recipe-card">
 
-        <h2>This peach caprese salad with heirloom tomatoes and fresh mozzarella is topped with a simple balsamic vinaigrette for a fantastic summer appetizer.</h2>
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4531443.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Peach and Tomato Caprese Salad">
 
-        <p>Such a refreshing summer salad with fresh peaches a mind fresh tomatoes. I used Buratta mozzarellas cheese with truffles which gave it a country-club meal feel.</p>
+            <h2>This peach caprese salad with heirloom tomatoes and fresh mozzarella is topped with a simple balsamic vinaigrette for a fantastic summer appetizer.</h2>
 
-        <h2>Ingredients</h2>
+            <p>Such a refreshing summer salad with fresh peaches a mind fresh tomatoes. I used Buratta mozzarellas cheese with truffles which gave it a country-club meal feel.</p>
 
-        <ul>
-            <li>2 tablespoons extra-virgin olive oil</li>
-            <li>1 tablespoon balsamic vinegar</li>
-            <li>1 teaspoon flaked salt, divided</li>
-            <li>2 large heirloom tomatoes, thinly sliced</li>
-            <li>2 ripe peaches - halved, pitted, and sliced into half moons</li>
-            <li>1 (8 ounce) ball fresh mozzarella, thinly sliced</li>
-            <li>6 leaves fresh basil</li>
-        </ul>
+            <h2>Ingredients</h2>
 
-        <h2>Steps</h2>
+            <ul>
+                <li>2 tablespoons extra-virgin olive oil</li>
+                <li>1 tablespoon balsamic vinegar</li>
+                <li>1 teaspoon flaked salt, divided</li>
+                <li>2 large heirloom tomatoes, thinly sliced</li>
+                <li>2 ripe peaches - halved, pitted, and sliced into half moons</li>
+                <li>1 (8 ounce) ball fresh mozzarella, thinly sliced</li>
+                <li>6 leaves fresh basil</li>
+            </ul>
 
-        <ol>
-            <li>Whisk olive oil, balsamic vinegar, and 1 pinch flaked salt together in a bowl until dressing is smooth.</li>
-            <li>Alternate tomato slices, peach slices, mozzarella slices, and basil leaves in layers on a platter. 
-                Drizzle dressing over salad and sprinkle remaining flaked salt on top.</li>
-        </ol>
+            <h2>Steps</h2>
 
-        <a href="../index.html">Go back</a>
+            <ol>
+                <li>Whisk olive oil, balsamic vinegar, and 1 pinch flaked salt together in a bowl until dressing is smooth.</li>
+                <li>Alternate tomato slices, peach slices, mozzarella slices, and basil leaves in layers on a platter. 
+                    Drizzle dressing over salad and sprinkle remaining flaked salt on top.</li>
+            </ol>
+
+            <a href="../index.html">Go back</a>
+        </div>
     </body>
 </html>
