--- a/recipes/chickenkabob.html
+++ b/recipes/chickenkabob.html
@@ -44,7 +44,7 @@
                 <li>Grill skewers on the prepared grill until the chicken is no longer pink and juices run clear.</li>
             </ol>
 
-            <a href="../index.html">Go back</a>
+            <a class="recipe-link" href="../index.html">Go back</a>
         </div>
     </body>
 </html>
